--- a/css/mypage.css
+++ b/css/mypage.css
@@ -2,6 +2,41 @@
     width:900px;
     height: 1250px;
 }
+.main2 {
+    width:900px;
+    height:600px;
+    justify-content: center;
+    padding-left: 30%;
+}
+
+/*프로필 수정 전체 박스*/
+.bigbox {
+    width: 700px;
+    height: 550px;
+    border-radius: 10px;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    font-size:30px;
+    text-align: center;
+    padding-top:15px;
+}
+/*프로필 기본 사진*/
+.box {
+    width: 150px;
+    height: 150px;
+    border-radius: 70%;
+    
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+}
+.profile {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
 
 /* 프로필 카드 */
 .profile-card {
