--- a/css/login.css
+++ b/css/login.css
@@ -3,3 +3,17 @@
     display: flex;
     justify-content: center;
 }
+
+.inner_box {
+    width: 40%;
+}
+
+.container {
+    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+}
+
+.button_box {
+    text-align: right;
+}
