--- a/css/signup.css
+++ b/css/signup.css
@@ -16,22 +16,31 @@
     width: 40%;
 }
 
-.form-control {
-
-    width: 60%;
-}
 
 .mb-3 {
-    margin-top: 6%;
+    margin-left: 20%;
+    margin-right: 5%;
     text-align: right;
+
 }
 
 
 .imgbox {
-    margin-top: 20%;
+    margin-top: 10%;
+    text-align: center;
 }
 
 .resized-img {
     width: 150px;
     height: 150px;
+}
+
+.custom-button {
+    margin-top: 1%;
+    width: 100%;
+}
+
+.button_group {
+    margin-top: 20%;
+
 }
