--- a/css/index.css
+++ b/css/index.css
@@ -21,20 +21,15 @@
   -moz-box-shadow: -1px 7px 4px -4px rgba(0, 0, 0, 0.42); */
 }
 
-/* 23.05.23 철민 */
-.nav-container {
-  width: 1200px;
-  margin: 0 auto;
-}
-
-/* 23.05.23. header 서경 */
 
 header {
-  /* 23.05.23 line-height from 150 to 85 철민 */
-  line-height: 85px;
+  /* 23.05.23 line-height from 150 to 85 철민
+  저희 로고가 쪼꼼 뚱뚱하네요 ㅎㅎ 보통 프론트에서 디폴트로 100을 많이 줘서 100으로 변경해보겠습니다..!
+  */
+  line-height: 100px;
 }
 
-header .container .nav-container {
+nav {
   position: relative;
   display: flex;
   justify-content: space-between;
@@ -50,7 +45,7 @@ h1 img {
   height: auto;
 }
 
-nav {
+.nav-drop-menu {
   position: absolute;
   display: none;
   top: 50%;
@@ -61,18 +56,18 @@ nav {
   /* display: none; */
 }
 
-nav ul li {
+.nav-drop-menu ul li {
   line-height: 100px;
   font-size: 25px;
   text-align: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
 
-nav ul li:last-child {
+.nav-drop-menu ul li:last-child {
   border-bottom: inherit;
 }
 
-nav.on {
+.nav-drop-menu.on {
   display: block;
 }
 
