--- a/css/index.css
+++ b/css/index.css
@@ -88,7 +88,8 @@ header .header_btn a {
 header .menu_btn {
   width: 300px;
   text-align: right;
-  font-size: 24px;
+  font-size: 48px;
+  line-height: 10px;
 }
 
 .menu_btn.on i:nth-child(1),
