--- a/css/consume.css
+++ b/css/consume.css
@@ -117,7 +117,7 @@ td {
     background-color: white;
     margin-bottom: 10px;
     width: 300px;
-    height: 250px;
+    height: auto;
     border-radius: 5px;
     box-shadow: 0px 35px 20px -30px rgba(0, 0, 0, 0.3);
     padding: 20px;
@@ -171,6 +171,11 @@ td {
 .consume-info {
     padding-top: 15px;
     font-weight: bold;
+}
+
+.style-input {
+    margin-top: 5px;
+    padding: 10px;
 }
 
 /* section 소비기록 끝 */
