:bug:Fix: html, css 네비바 수정 및 겹치는 선택자 수정

--- a/css/list.css
+++ b/css/list.css
@@ -16,13 +16,13 @@ ul {
   text-align: center;
 }
 
-ul > li {
+.pagination > li {
   display: inline-block;
   font-size: 2.2rem;
   float: left;
   margin-right: 10px;
 }
 
-ul > li > a {
+.pagination > li > a {
   float: none;
 }
