--- a/css/mypage.css
+++ b/css/mypage.css
@@ -1,63 +1,104 @@
-/* 에스코어드림체(기록 버튼 글씨체 */
 @font-face {
-    font-family: 'S-CoreDream-3Light';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff');
+    font-family: 'OTWelcomeRA';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2110@1.0/OTWelcomeRA.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
-/* 둘기마요 글씨체 (달력 글씨체로 쓰임) */
+/* 마포꽃섬 글씨체 (달력 글씨체로 쓰임) */
 @font-face {
-    font-family: 'Dovemayo_gothic';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.1/Dovemayo_gothic.woff2') format('woff2');
+    font-family: 'MapoFlowerIsland';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoFlowerIslandA.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+}
+.numbers{
+    font-family: 'MapoFlowerIsland';
 }
 
 .main {
     width:900px;
-    height: 1250px;
+    height: 1800px;
+    
 }
 
+p {
+    font-family: 'OTWelcomeRA';
+}
 /* 프로필 카드 */
 .profile-card {
-    margin:20px 20px 20px 20px;
+    margin:100px 20px 20px 40px;
     width: 400px;
+    height:400px;
     text-align: center;
     border-radius: 8px;
     border: 2px solid black;
     overflow: hidden;
-    padding-bottom: 20px;
-  }
 
-  /* 프로필 카드 헤더  */
-.card-header {
-    background: transparent;
-    padding: 60px 40px 40px 40px;
-    height: 200px;
   }
-
-.card-group {
-    padding-top: 20px;
-    font-size: 20px;
-    text-align: center;
+.update {
+    font-size:20px;
+    background-color: rgba(109, 86, 68, 0.822);
+    color:white;
+    font-family: 'MapoFlowerIsland';
+    margin-bottom: 20px;
+    border-radius: 10px;
+    height:30px;
 }
+
+/*프로필 기본 사진*/
+.bigbox {
+    padding-left: 120px;
+    padding-bottom: 30px;
+}
+.box {
+    width: 150px;
+    height: 150px;
+    border-radius: 70%;
+    overflow: hidden;
+    position: relative;
+}
+.profile {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+/* 내 챌린지 관리 카드 비율 */
 .consumecontainer {
     position: absolute; 
     top:180px;
     left: 500px; 
     text-align:left;
     font-size: 30px;
+    
+    
+}
+.myProfile {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-family: 'MapoFlowerIsland';
+}
+.item {
+    font-family: 'MapoFlowerIsland';
+    padding-bottom: 10px;
 
 }
+.card-footer {
+    padding-top: 20px;
+    background-color: transparent;
+    font-family: 'MapoFlowerIsland';
+    font-size: 20px;
+}
+/* 관심있는 챌린지 카드 비율 */
 .myinterestingchallenge {
     position: absolute;  
     text-align:left;
     font-size: 30px;
     padding-left: 30px;
-    padding-top: 40px;
+    padding-top: 170px;
+    
 }
 .myconsumestatus {
-    padding-top:300px;
+    padding-top:700px;
     position:absolute;  
     text-align:left;
     font-size: 30px;
@@ -65,7 +106,7 @@
     height: 300px;
 }
 .mybank {
-    padding-top:700px;
+    margin-top:300px;
     position:absolute;  
     text-align:left;
     font-size: 30px;
@@ -78,54 +119,69 @@
 }
 .line {
     margin-top: 10px;
-    border: 1px solid gray;
+    margin-bottom: 30px;
+    border: 1px solid #efff5eec;
     width:100%;
+
 }
 .line2 {
     margin-top: 10px;
-    border: 1px solid gray;
-    width:100%;
+    margin-bottom: 30px;
+    border: 1px solid #efff5eec;
+    width:1400px;
 }
 .container{
     width: 1200px;
     margin: 0 auto;
 }
 .mybank {
-    font-family: 'S-CoreDream-3Light';
-    padding-top: 400px;
+    font-family: 'MapoFlowerIsland';
+    padding-top: 500px;
     padding-left: 600px;
 }
 .incomebutton{
     font-size:20px;
-    background-color: rgba(175, 34, 231, 0.781);
+    background-color: rgba(109, 86, 68, 0.822);
     color:white;
-    font-family: 'S-CoreDream-3Light';
+    font-family: 'MapoFlowerIsland';
     margin-left: 600px;
     border-radius: 10px;
     height:40px;
 }
 .consumebutton{
     font-size: 20px;
-    color: rgba(175, 34, 231, 0.781);
-    background-color:white;
-    font-family: 'S-CoreDream-3Light';
+    background-color: rgba(109, 86, 68, 0.822);
+    color:white;
+    font-family: 'MapoFlowerIsland';
     margin-left: 600px;
     border-radius: 10px;
     height:40px;
 }
 .banksavebutton{
     font-size: 20px;
-    background-color: rgba(175, 34, 231, 0.781);
-    color:white;
-    font-family: 'S-CoreDream-3Light';
+    background-color: rgba(109, 86, 68, 0.822);
+    color: white;
+    font-family: 'MapoFlowerIsland';
     margin-left: 600px;
     border-radius: 10px;
     height:40px;
 }
+.imagebox {
+    padding: 20px 0px 20px 90px;
+}
+
+.imagebox2 {
+    padding: 20px 0px 20px 160px;
+}
+.card-title {
+    font-family: 'MapoFlowerIsland';
+}
+.card-text {
+    font-family: 'MapoFlowerIsland';
+}
 /* 마이페이지 수입,지출,저축 기록하기 금액 글씨 */
 .money {
-    font-family: 'S-CoreDream-3Light';
-    text-decoration:  rgba(175, 34, 231, 0.781)  ;
+    font-family: 'MapoFlowerIsland';
     padding-bottom: 10px;
     padding-left: 20px;
 }
@@ -153,41 +209,46 @@ td {
 }
 
 .Calendar>thead>tr:first-child>td {
+    font-family: 'MapoFlowerIsland';
     font-size: 1.1em;
     font-weight: bold;
     padding-bottom: 10px;
+    color: rgba(109, 86, 68, 0.822);
 }
 
 .Calendar>thead>tr:last-child>td {
-    font-family: 'Dovemayo_gothic';
-    background-color: rgba(175, 34, 231, 0.781);
-    color: white;
+    font-family: 'MapoFlowerIsland';
+    background-color: rgba(231, 57, 34, 0.322);
+    color: rgba(109, 86, 68, 0.822);
     
 }
 
 .pastDay {
-    background-color: rgba(243, 252, 124, 0.822);
+    background-color: rgba(206, 167, 135, 0.342);
     cursor: pointer;
-    font-family: 'Dovemayo_gothic';
+    font-family: 'MapoFlowerIsland';
+    color: rgba(109, 86, 68, 0.822)
 }
 
 .today {
-    font-family: 'Dovemayo_gothic';
-    background-color: #ff96dfda;
+    font-family: 'MapoFlowerIsland';
+    background-color: rgba(231, 57, 34, 0.322);
     cursor: pointer;
+    color: rgba(109, 86, 68, 0.822);
 }
 
 .futureDay {
-    font-family: 'Dovemayo_gothic';
+    font-family: 'MapoFlowerIsland';
     background-color: #FFFFFF;
     cursor: pointer;
+    color: rgba(109, 86, 68, 0.822);
 }
 
 .pastDay.choiceDay,
 .futureDay.choiceDay,
 .today.choiceDay {
-    font-family: 'Dovemayo_gothic';
-    background-color: #3E85EF;
+    font-family: 'MapoFlowerIsland';
+    background-color: #9cc3ff;
     color: #fff;
     cursor: pointer;
 }
