--- a/css/login.css
+++ b/css/login.css
@@ -1,25 +1,41 @@
 .title {
-    margin-top: 7%;
+    margin-top: 3%;
+    margin-bottom: 3%;
     display: flex;
     justify-content: center;
 }
 
 .inner_box {
-    width: 40%;
     text-align: right;
-    margin-right: 3%;
+    width: 60%;
+
 }
 
 .container {
-    margin-top: 5%;
+    font-size: 1.8rem;
+
     display: flex;
     justify-content: center;
 }
 
-.button_box {
-    text-align: right;
+.custom_btn {
+    font-size: 1.8rem;
+    color: black;
 }
 
-.custom_btn {
-    color: black;
+.custom_box {
+    font-size: 1.8rem;
+}
+
+#mainText {
+    font-size: 5rem;
+    margin-right: 1%;
+}
+
+.subText {
+    margin-top: 10%;
+}
+
+.button_box {
+    margin-top: 3%;
 }
