--- a/css/mypage.css
+++ b/css/mypage.css
@@ -205,7 +205,7 @@ p {
 /* 마이페이지 수입,지출,저축 기록하기 금액 글씨 */
 .money {
     font-family: 'MapoFlowerIsland';
-    >>>>>>>64c04572f5f1ad85943f6d29d5817f7529767650 padding-bottom: 10px;
+    padding-bottom: 10px;
     padding-left: 20px;
 }
 
