--- a/css/index.css
+++ b/css/index.css
@@ -143,10 +143,6 @@ h3 {
   margin-top: 30px;
 }
 
-.top-challenge {
-  margin-top: 50px;
-}
-
 .top-card {
   padding: 10px;
   border: solid 3px rgb(71, 71, 71);
@@ -188,6 +184,10 @@ h3 {
   right: 0;
   bottom: 0;
   text-align: right;
+}
+
+.top-challenge {
+  margin: 50px 0 100px 0;
 }
 
 /* main content end */
