--- a/css/index.css
+++ b/css/index.css
@@ -69,8 +69,13 @@ h3 {
   background-color: rgba(138, 138, 138, 0.5);
 }
 
+.consume-cover {
+  display: flex;
+  flex-direction: row;
+}
+
 .graph-container {
-  display: inline-block;
+  display: flex;
   width: 58%;
   height: 300px;
 }
