--- a/css/consumedetail.css
+++ b/css/consumedetail.css
@@ -1,4 +1,8 @@
 /* section calendar 지수*/
+/** {
+    outline: 1px solid red
+}
+*/
 
 @font-face {
     font-family: 'OTWelcomeRA';
@@ -15,12 +19,23 @@
     font-style: normal;
 }
 
+.main {
+    min-height: 800px;
+}
+
 p,
-h1,
-h3 {
+h1 {
     font-family: 'OTWelcomeRA';
 }
 
+.mybank {
+    margin-top: 300px;
+    position: absolute;
+    text-align: left;
+    font-size: 30px;
+    padding-left: 30px;
+    height: 300px;
+}
 
 .consumebutton {
     font-size: 20px;
@@ -43,6 +58,7 @@ td {
 .calendar-section {
     background-color: white;
     margin-bottom: 10px;
+    margin-left: 100px;
     width: 300px;
     height: auto;
     border-radius: 5px;
@@ -103,7 +119,7 @@ td {
 
 .card {
     background-color: rgb(229, 240, 240);
-    margin: 20px 15vw;
+    margin: 20px;
     align-items: center;
     width: 70%;
     padding: 10px;
