--- a/css/mypage.css
+++ b/css/mypage.css
@@ -75,7 +75,6 @@ p {
     text-align: left;
     font-size: 30px;
 
-
 }
 
 .myProfile {
@@ -112,7 +111,7 @@ p {
     position: absolute;
     text-align: left;
     font-size: 30px;
-    padding-left: 30px;
+
     height: 300px;
 }
 
@@ -254,3 +253,34 @@ td {
 }
 
 /* section calendar 끝 */
+
+.row-cols-md-3>* {
+    /* flex: 0 0 auto; */
+    /* flex: 0; */
+    width: 300px;
+}
+
+#bookmark_box {
+    background-color: rgba(231, 57, 34, 0.322);
+    color: rgba(109, 86, 68, 0.822);
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+.element.style {
+    font-family: 'MapoFlowerIsland';
+    background-color: rgba(231, 57, 34, 0.322);
+    color: rgba(109, 86, 68, 0.822);
+
+}
+
+#bookmark_box2 {
+    background-color: transparent;
+    color: rgba(109, 86, 68, 0.822);
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+}
