--- a/css/index.css
+++ b/css/index.css
@@ -5,11 +5,17 @@
   font-weight: 700;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Cafe24ClassicType-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-2@1.0/Cafe24ClassicType-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
 
 * {
-  /* outline: 1px solid red; */
-  font-family: "LINESeedKR-Bd";
-  /* background-color: aquamarine; */
+  
+  font-family: "LINESeedKR-Bd";;
+
 }
 
 /* main content */
@@ -32,6 +38,7 @@ img {
   border: 2px solid #000;
   border-radius: 5px;
   background: #fff;
+
   /* display: none; */
 }
 
@@ -68,7 +75,13 @@ h3 {
   height: 2px;
   background-color: rgba(138, 138, 138, 0.5);
 }
+.header_btn {
+  padding-left: 50px;
+}
 
+.menu_btn {
+  padding-right: 150px;
+}
 .graph-container {
   display: inline-block;
   width: 58%;
