--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'Chosunilbo_myungjo';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Chosunilbo_myungjo.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
 .title {
     margin-top: 3%;
     margin-bottom: 3%;
@@ -13,9 +21,9 @@
 
 .container {
     font-size: 1.8rem;
-
     display: flex;
     justify-content: center;
+    padding-bottom: 100px;
 }
 
 .custom_btn {
@@ -28,8 +36,10 @@
 }
 
 #mainText {
-    font-size: 5rem;
+    font-family: 'Chosunilbo_myungjo';
+    font-size: 4.3rem;
     margin-right: 1%;
+    color: rgb(173, 116, 116);
 }
 
 .subText {
