--- a/css/updateUserInfo.css
+++ b/css/updateUserInfo.css
@@ -1,8 +1,14 @@
+*{
+    outline: 1px solid red;
+}
+
+section {
+    margin: 0 auto;
+}
 .container_box {
     display: flex;
     justify-content: center;
-    width: 40%;
-    margin-top: 3%;
+    margin: 0 auto;
 }
 
 .custom_button {
@@ -15,37 +21,34 @@
 #containerBox_one {
     margin-top: 3%;
     display: none;
-    width: 40%;
     font-size: 1.8rem;
 }
 
 #containerBox_two {
-    margin-top: 5%;
+    margin-top: 10%;
     font-size: 2.5vw;
-    width: 28%;
     height: 30rem;
-    position: relative;
+    text-align: center;
+
 }
 
-span {
-    display: inline-block;
-    line-height: 150px;
-    vertical-align: middle;
-}
-
-.container-itmes {
-    margin-top: 3%;
-    height: 50%;
+#containerBox_two a {
+    border-radius: 10px;
+    line-height: 80px;
     background-color: black;
     color: aliceblue;
-    border-radius: 15%;
-    text-align: center;
+    margin-bottom: 10px;
 }
 
-.container-itmes:hover {
+#containerBox_two a:hover {
     border: 1px solid black;
     background-color: white;
     color: black;
+}
+
+#containerBox_two div {
+    margin: 0 auto;
+    width: 40%;
 }
 
 .custom_input {
