--- a/css/index.css
+++ b/css/index.css
@@ -1,20 +1,22 @@
 @font-face {
   font-family: "LINESeedKR-Bd";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/LINESeedKR-Bd.woff2")
-    format("woff2");
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/LINESeedKR-Bd.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Cafe24ClassicType-Regular';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-2@1.0/Cafe24ClassicType-Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
+
 /* 전체 글씨 적용 */
 * {
-  
-  font-family: "LINESeedKR-Bd";;
+
+  font-family: "LINESeedKR-Bd";
+  ;
 
 }
 
@@ -56,7 +58,7 @@ h3 {
   float: right;
 }
 
-.button-cover > a {
+.button-cover>a {
   padding: 0 13px;
   display: inline-block;
   line-height: 28px;
@@ -75,6 +77,7 @@ h3 {
   height: 2px;
   background-color: rgba(138, 138, 138, 0.5);
 }
+
 .header_btn {
   padding-left: 50px;
 }
@@ -87,6 +90,7 @@ h3 {
 .menu_btn {
   padding-right: 150px;
 }
+
 .graph-container {
   display: flex;
   width: 58%;
@@ -99,7 +103,7 @@ h3 {
   height: 300px;
 }
 
-.report-container > ul > li {
+.report-container>ul>li {
   display: block;
   border: 2px solid rgba(138, 138, 138, 0.5);
   border-radius: 5px;
@@ -132,14 +136,15 @@ h3 {
 .card-content-container {
   float: left;
   width: 180px;
+
 }
 
-.card-content-container > h2 {
+.card-content-container>h2 {
   margin: 15px;
   font-size: 2rem;
 }
 
-.card-content-container > h3 {
+.card-content-container>h3 {
   margin: 15px;
   font-size: 1.6rem;
 }
@@ -155,7 +160,7 @@ h3 {
   overflow: hidden;
   position: relative;
   border: solid 3px gray;
-} 
+}
 
 .challenge-check:hover {
   background-color: #f7f7f7;
@@ -191,12 +196,12 @@ h3 {
 
 
 
-.top-card-content-container > h2 {
+.top-card-content-container>h2 {
   margin: 15px;
   font-size: 3rem;
 }
 
-.top-card-content-container > h3 {
+.top-card-content-container>h3 {
   margin: 15px;
   font-size: 1.7rem;
 }
@@ -212,11 +217,11 @@ h3 {
   margin: 50px 0 100px 0;
 }
 
-.graph-container > h1 {
+.graph-container>h1 {
   font-size: 3rem;
 }
 
-.top-card-tags > a {
+.top-card-tags>a {
   z-index: 999;
   border: solid 1px rgba(138, 138, 138, 0.5);
   padding: 4px;
@@ -224,7 +229,7 @@ h3 {
   border-radius: 5px;
 }
 
-.card-tags > a {
+.card-tags>a {
   z-index: 999;
   border: solid 1px rgba(138, 138, 138, 0.5);
   padding: 4px;
@@ -233,7 +238,7 @@ h3 {
 }
 
 #remainingAmount {
-  color:#ec3434;
+  color: #ec3434;
 }
 
 /* main content end */
