--- a/css/challengedetail.css
+++ b/css/challengedetail.css
@@ -1,3 +1,7 @@
+/* *{
+    outline: 1px solid red;
+} */
+
 form {
     background-color: #fff;
     padding: 0 30px;
@@ -54,12 +58,20 @@ form {
     min-height: 90%;
 }
 
-.challenge-btn {
-    text-align: right;
+.challenge-form-btn {
+    display: flex;
+    gap: 15px;
+    justify-content: flex-end;
 }
 
 .title {
     justify-content:space-between;
+}
+
+.like-people{
+    font-size: 24px;
+    display: flex;
+    gap: 10px;
 }
 
 .challenge-people h3{
@@ -70,9 +82,7 @@ form {
 
 .challenge-people-list {
     display: flex;
-    gap: 15px;
     background-color: #fff;
-    
 }
 
 .challenge-people-list .people {
@@ -80,10 +90,10 @@ form {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 95px;
     text-align: center;
-    padding: 10px;
+    padding: 10px 0;
 }
 
 .challenge-people-list .people img {
@@ -101,4 +111,18 @@ form {
     margin: 30px 0 0 0;
     display: flex;
     align-items: end;
+}
+
+.user-image {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.card-body {
+    display: flex;
+}
+.comment_box {
+    margin-top: 3%;
+    margin-left: 3%;
 }
