:hammer:Refact: update mypage.js

--- a/css/mypage.css
+++ b/css/mypage.css
@@ -155,9 +155,10 @@ p {
     margin: 0 auto;
 }
 
+/* 
 .slider {
     background-color: antiquewhite;
-}
+} */
 
 .mybank {
     font-family: 'MapoFlowerIsland';
@@ -309,5 +310,6 @@ td {
 
 .card_box {
     border-color: 1px solid rgba(231, 57, 34, 0.322);
+    background-color: #fff;
     display: inline;
 }
