--- a/css/mypage.css
+++ b/css/mypage.css
@@ -22,8 +22,8 @@
 }
 
 .main {
-    width: 900px;
-    height: 2000px;
+    margin: 0 auto;
+    width: 1200px;
 }
 
 p,
@@ -33,7 +33,7 @@ h3 {
 
 /* 프로필 카드 */
 .profile-card {
-    margin: 100px 20px 20px 40px;
+    margin: 20px 20px;
     width: 400px;
     height: 400px;
     text-align: center;
@@ -66,6 +66,12 @@ h3 {
     position: relative;
 }
 
+.my-challenge-cover {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: row;
+}
+
 .profile {
     width: 100%;
     height: 100%;
@@ -74,9 +80,6 @@ h3 {
 
 /* 내 챌린지 관리 카드 비율 */
 .consumecontainer {
-    position: absolute;
-    top: 300px;
-    left: 500px;
     text-align: left;
     font-size: 30px;
 
