--- a/css/mypage.css
+++ b/css/mypage.css
@@ -75,7 +75,7 @@ h3 {
 /* 내 챌린지 관리 카드 비율 */
 .consumecontainer {
     position: absolute;
-    top: 300px;
+    top: 250px;
     left: 500px;
     text-align: left;
     font-size: 30px;
@@ -160,7 +160,7 @@ h3 {
     margin-top: 10px;
 
     margin-bottom: 50px;
-    border: 1px solid #efff5eec;
+    border: 1px solid rgba(134, 127, 115, 0.568);
     width: 1400px;
 }
 
